-quartz config properties added -custom instance id generator added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#APP CONFIGS
 server.port=10100
 
 spring.datasource.platform=org.hibernate.dialect.MySQL5Dialect
@@ -7,3 +8,21 @@ spring.datasource.username=root
 spring.datasource.password=admin
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=update
+
+
+#QUARTZ CONFIGS
+spring.quartz.job-store-type=jdbc
+spring.quartz.jdbc.initialize-schema=never
+
+spring.quartz.properties.org.quartz.scheduler.instanceName=quartz-demo-app
+spring.quartz.properties.org.quartz.scheduler.instanceId=AUTO
+spring.quartz.properties.org.quartz.scheduler.instanceIdGenerator.class=com.helixz.quartz.demo.component.CustomQuartzInstanceIdGenerator
+spring.quartz.properties.org.quartz.threadPool.threadCount=20
+spring.quartz.properties.org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
+spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+spring.quartz.properties.org.quartz.jobStore.useProperties=true
+spring.quartz.properties.org.quartz.jobStore.misfireThreshold=60000
+spring.quartz.properties.org.quartz.jobStore.tablePrefix=qrtz_
+spring.quartz.properties.org.quartz.jobStore.isClustered=true
+spring.quartz.properties.org.quartz.plugin.shutdownHook.class=org.quartz.plugins.management.ShutdownHookPlugin
+spring.quartz.properties.org.quartz.plugin.shutdownHook.cleanShutdown=TRUE
