--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=10100
 
 spring.datasource.platform=org.hibernate.dialect.MySQL5Dialect
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/quartz_demo_db
 spring.datasource.username=root
 spring.datasource.password=admin
