--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.datasource.username=root
 spring.datasource.password=admin
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 
 #QUARTZ CONFIGS
